--- a/paymentapp/pom.xml
+++ b/paymentapp/pom.xml
@@ -44,17 +44,17 @@
 			<scope>provided</scope>
 		</dependency>
 		
- 		 <dependency> 
- 			<groupId>mysql</groupId> 
- 			<artifactId>mysql-connector-java</artifactId> 
- 		</dependency>  
+<!-- 		<dependency> -->
+<!-- 			<groupId>mysql</groupId> -->
+<!-- 			<artifactId>mysql-connector-java</artifactId> -->
+<!-- 		</dependency> -->
 		
 		
-<!-- 		<dependency>
-  			<groupId>org.postgresql</groupId>
-  			<artifactId>postgresql</artifactId>
-  			<version>9.4-1201-jdbc4</version>
-		</dependency> -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc4</version>
+		</dependency>
 		
 		
 		<dependency>
