--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.jacana</groupId>
-	<artifactId>payment</artifactId>
+	<artifactId>paymmentApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>paymmentApp </name>
@@ -43,17 +43,17 @@
 			<scope>provided</scope>
 		</dependency>
 		
- 		 <dependency> 
+<!--  		 <dependency> 
  			<groupId>mysql</groupId> 
  			<artifactId>mysql-connector-java</artifactId> 
- 		</dependency>  
+ 		</dependency>  --> 
 		
 		
-<!-- 		<dependency>
+		<dependency>
   			<groupId>org.postgresql</groupId>
   			<artifactId>postgresql</artifactId>
   			<version>9.4-1201-jdbc4</version>
-		</dependency> -->
+ 		</dependency> 
 		
 		
 		<dependency>
