--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
+<!-- 		<finalName>${project.artifactId}</finalName> -->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
